<resources>
    <string name="app_name">DSS_Project</string>


    <!-- activity names -->
    <string name="activity_registration">Endless-To-Go Registration</string>
    <string name="activity_login">Endless-To-Go Login</string>

    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_login_facebook">Login with Facebook</string>
    <string name="button_login_twitter">Login with Twitter</string>

    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
</resources>
